--- a/Lab01.html
+++ b/Lab01.html
@@ -1,5 +1,5 @@
 <html>
-<tittle> My Favorite Recipe</tittle>
+<title> My Favorite Recipe</title>
 <h1>French Toast</h1>
 <h2> Sarah's special one of a kind French Toast</h2>
 <ul>
