--- a/lab03.css/index.html
+++ b/lab03.css/index.html
@@ -7,6 +7,9 @@
 </head>
 
  <body>
+    <div class="class1">
+        <img src="French Toast2.jpg" atl="french toast2">
+    </div>
         <header>
             <h1> French Toast</h1>
             <h2>Sarah's special one of a kind French Toast</h2>
@@ -20,6 +23,7 @@
                 <li>sugar</li>
                 <li>cinnamon</li>
                 <li>vanilla</li>
+                <img src="French Toast.jpg" atl="french toast">
             </ul>
         </section>
         <section>
@@ -33,7 +37,6 @@
         </section>
 
         <p>A favorite dish, french toast is enjoyable for any occasion because it's tasty, simple to prepare, flexible, and nostalgic.</p>
-        <a href="index.html"><img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fnatashaskitchen.com%2Fwp-content%2Fuploads%2F2021%2F03%2FFrench-Toast-SQ.jpg&tbnid=Jg0sfM-s1p8SQM&vet=12ahUKEwjUu9zU272EAxVhFVkFHdAcD5cQMygTegUIARCuAQ..i&imgrefurl=https%3A%2F%2Fnatashaskitchen.com%2Ffrench-toast-recipe%2F&docid=W0TWEMFwsrP_lM&w=1200&h=1200&q=pictures%20of%20french%20toast&client=safari&ved=2ahUKEwjUu9zU272EAxVhFVkFHdAcD5cQMygTegUIARCuAQ" heigh="400" width="150"/>
         <a href="https://www.allrecipes.com/recipe-redemption-french-toast-makeover-8557186">vist allrecipes.com!</a>
    </body>
 </html>
