--- a/project/practice.html
+++ b/project/practice.html
@@ -6,6 +6,15 @@
     <title>My practice codes</title>
 </head>
 <body>
+    <nav>
+        <div class="container">
+            <div class="nav-links">
+                <a href="classportfolio.html">Home Page</a>
+                <a href="about.html">About</a>
+                <a href="practice.html">Practice</a>
+                <a href="project.html">Projects</a>
+            </div>
+        </div>
     <div class="container">
     <header>
         <h1>Take a look at some of my HTML and CSS practice codes!</h1>
