--- a/project/project.html
+++ b/project/project.html
@@ -5,7 +5,15 @@
     <link rel="stylesheet" href="classport.css">
     <title>My Project</title>
 </head>
-<body>
+<nav>
+    <div class="container">
+        <div class="nav-links">
+            <a href="classportfolio.html">Home Page</a>
+            <a href="about.html">About</a>
+            <a href="practice.html">Practice</a>
+            <a href="project.html">Projects</a>
+        </div>
+    </div>
     <header>
         <h1>Take a look at some of my HTML webpages!</h1>
     </header>
