--- a/project/about.html
+++ b/project/about.html
@@ -15,6 +15,15 @@
     </style>
 </head>
 <body>
+    <nav>
+        <div class="container">
+            <div class="nav-links">
+                <a href="classportfolio.html">Home Page</a>
+                <a href="about.html">About</a>
+                <a href="practice.html">Practice</a>
+                <a href="project.html">Projects</a>
+            </div>
+        </div>
     <header>
         <h1>Welcome to all about me!</h1>
         <img src="picofme.jpeg" alt="A picture of me">
