--- a/lab07/index.html
+++ b/lab07/index.html
@@ -18,47 +18,50 @@
         </tr>
     </thead>
     <tbody>
-                <tr>
-                    <td>Rumors (feat. Lil Durk)</td>
-                    <td>by: Gucci Mane</td>
-                    <td>Hip-Hop/Rap</td>
-                    <td>61M views on Youtube</td>
-                    <td>2022</td>
-                    <td>8.5/10</td>
-                </tr>
-                <tr>
-                    <td>Hanging with wolves</td>
-                    <td>by: Lil Durk</td>
-                    <td>Hip-Hop/Rap</td>
-                    <td>57M views on Youtube</td>
-                    <td>2022</td>
-                    <td>7/10</td>
-                </tr>
-                <tr>
-                    <td>Gang Signs</td>
-                    <td>by: Lil Baby</td>
-                    <td>Hip-Hop/Rap</td>
-                    <td>4.8M views on Youtube</td>
-                    <td>2020</td>
-                    <td>10/10</td>
-                </tr>
-                <tr>
-                    <td>Woman Like Me</td>
-                    <td>by: Adele</td>
-                    <td>Pop soul</td>
-                    <td>7.6M views on Youtube</td>
-                    <td>2021</td>
-                    <td>9/10</td>
-                </tr>
-                <tr>
-                    <td>Go Hard</td>
-                    <td>by: Lil Baby</td>
-                    <td>Hip-Hop/Rap</td>
-                    <td>18M views on Youtube</td>
-                    <td>2023</td>
-                    <td>10/10</td>
-                </tr>
-            </tbody>
+        <tr>
+            <td>Rumors (feat. Lil Durk)</td>
+            <td>by: Gucci Mane</td>
+            <td>Hip-Hop/Rap</td>
+            <td>61M views on Youtube</td>
+            <td>2022</td>
+            <td>8.5/10</td>
+        </tr>
+        <tr>
+            <td>Hanging with wolves</td>
+            <td>by: Lil Durk</td>
+            <td>Hip-Hop/Rap</td>
+            <td>57M views on Youtube</td>
+            <td>2022</td>
+            <td>7/10</td>
+        </tr>
+        <tr>
+            <td>Gang Signs</td>
+            <td>by: Lil Baby</td>
+            <td>Hip-Hop/Rap</td>
+            <td>4.8M views on Youtube</td>
+            <td>2020</td>
+            <td>10/10</td>
+        </tr>
+        <tr>
+            <td>Woman Like Me</td>
+            <td>by: Adele</td>
+            <td>Pop soul</td>
+            <td>7.6M views on Youtube</td>
+            <td>2021</td>
+            <td>9/10</td>
+        </tr>
+        <tr>
+            <td>Go Hard</td>
+            <td>by: Lil Baby</td>
+            <td>Hip-Hop/Rap</td>
+            <td>18M views on Youtube</td>
+            <td>2023</td>
+            <td>10/10</td>
+        </tr>
+       <tr>
+            <td colspan="6" class="center-text">My Favorite Media is Music!</td>
+        </tr> 
+    </tbody>
 </table>
 </body>
 </html>
