--- a/lab08/homepage.html
+++ b/lab08/homepage.html
@@ -13,7 +13,7 @@
     <main>
         <section>
             <h3>1. Text Input</h3>
-            <h4>Please enter your name in.</h4>
+            <h4>Please enter your name.</h4>
             <p>Text inputs are used to collect brief text-based information such as names, email addresses, passwords, or age.</p>
             <form id="textInputForm">
                 <label for="name">Name:</label>
@@ -22,7 +22,7 @@
             </form>
         </section>
         <section>
-            <h3>5. Date and time Form control</h3>
+            <h3>2. Date and time Form control</h3>
             <h4>Please enter today's date.</h4>
             <p>The time and date form control allows users to input both date and time.</p>
             <form id="dateTimeForm">
@@ -48,8 +48,8 @@
             </form>
         </section>
         <section>
-            <h3>2. Scrolling Text Box</h3>
-            <h4>Please type in your most favorite childhood memories in the text box.</h4>
+            <h3>4. Scrolling Text Box</h3>
+            <h4>Please type in your most favorite childhood memories in the comments box.</h4>
             <p>Scrolling text box are great for gathering lengthier text, like comments or messages.</p>
             <form id="scrollingTextBoxForm">
                 <label for="comments">Comments:</label>
@@ -58,7 +58,7 @@
             </form>
         </section>
         <section>
-            <h3>4. Radio Buttons</h3>
+            <h3>5. Radio Buttons</h3>
             <h4>How is your day going?</h4>
             <p>Radio buttons allow users to select only one option from a range of choices.</p>
             <form id="radioButtonsForm">
