--- a/lab10/XMLandJS.html
+++ b/lab10/XMLandJS.html
@@ -26,15 +26,13 @@
     <p>XML is used to structure, store, and transport data in a readable format.</p>
     <h3>What does XML look like?</h3>
     <p>Here is an example of XML:</p>
-    <div> 
-        <meeting>
-            <organizer>XML</organizer>
-            <attendee>is</attendee>
-            <subject>very</subject>
-            <date>easy</date>
-            <time>to</time>
-            <location>understand</location>
-        </meeting>        
+    <div class="meeting">
+        <p><strong>Organizer:</strong> XML</p>
+        <p><strong>Attendee:</strong> is</p>
+        <p><strong>Subject:</strong> very</p>
+        <p><strong>Date:</strong> easy</p>
+        <p><strong>Time:</strong> to</p>
+        <p><strong>Location:</strong> understand</p>
     </div>
     <h3>What is JavaScript?</h3>
     <p>JavaScript is a programming language used to create interactive and dynamic web content. It can manipulate and validate data on web pages.</p>
@@ -91,4 +89,6 @@
     </ul>
 </body>
 </html>
+
+
 
